--------
v2.0-git
--------

[mms] Use IMP API for IMAP actions.
[mms] Convert to Horde 5 standards.


----------
v1.2.3-cvs
----------

[jan] Fix Oracle SQL scripts.
[jan] Add Croatian translation (Matej Vela <matej.vela@carnet.hr>).
[jan] Add PostgreSQL-specific upgrade script (Request #8630).
[jan] Fix procmail vacation rule (micha@kovoks.nl, Bug #7052).
[jan] Prevent deadlock with vacation rule in maildrop driver (Bug #8577).


------
v1.2.2
------

[mms] Upgrade prototype.js to v1.6.1.
[jan] Correctly match negative header values with numeric comparison in Sieve
      driver (bb@apc.ag, Bug #7308).
[jan] Implement removeUserData API (adrieder@sbox.tugraz.at, Request #8452).
[jan] Take default settings for forwards, vacation and spam rules from
      config/prefs.php in the SQL storage driver.
[jan] No longer try to read spam folder from IMP's preferences.
[jan] Fix maildrop rules without conditions (almarin@um.es, Bug #8103).
[cjh] Fix checks for the forward_file and forward_script procmail parameters
      in the VFS driver (Bug #7811).
[cjh] Add %d (domain) as a replaceable variable in the vfs_path parameter
      (dev@stean.ch, Request #7503).
[jan] Make it easier to select the "Create new folder" entry for target folders
      (Bug #7768).
[cjh] Fix reading the current script in the VFS driver (rsalmon@mbpgroup.com,
      Bug #7610).
[cjh] Maildrop vacation rule: don't reply to bulk/list messages, add start/end
      times, better character support in the message, allow subsequent rules
      to execute (rsalmon@mbpgroup.com, Bug #7140).
[cjh] Fix compound header tests in the procmail and maildrop drivers
      (rsalmon@mbpgroup.com, Bugs #7117, #7611).
[jan] Change group field in shares table to work with LDAP groups (Bug #6883).


------
v1.2.1
------

[jan] Don't show script icon in menu if preference to automatically update
      scripts is both set and locked (Request #7251).
[jan] Fix adding more than 5 wildcard blacklists (Bug #7077).